--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Road Closings\n"
 "Report-Msgid-Bugs-To: dev@bloomington.in.gov\n"
 "POT-Creation-Date: 2013-09-20 16:33-0400\n"
-"PO-Revision-Date: 2014-11-03 09:20-0500\n"
+"PO-Revision-Date: 2014-11-03 11:30-0500\n"
 "Last-Translator: Cliff Ingham <inghamn@bloomington.in.gov>\n"
 "Language-Team: City of Bloomington <dev@bloomington.in.gov>\n"
 "MIME-Version: 1.0\n"
@@ -136,6 +136,27 @@ msgstr "Edit Event"
 
 msgid "event_info"
 msgstr "Event Info"
+
+msgid "created"
+msgstr "Created"
+
+msgid "updated"
+msgstr "Updated"
+
+msgid "headline"
+msgstr "Headline"
+
+msgid "eventType"
+msgstr "Event Type"
+
+msgid "severity"
+msgstr "Severity"
+
+msgid "status"
+msgstr "Status"
+
+msgid "detour"
+msgstr "Detour"
 
 msgid "jurisdiction"
 msgid_plural "jurisdictions"
