--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -1,24 +1,22 @@
 # Translation
-# Copyright (C) 2013-2014 City of Bloomington
+# Copyright (C) 2013-2015 City of Bloomington
 # This file is distributed under the same license as the Blossom package.
 #
-# Cliff Ingham, 2013-2014.
+# Cliff Ingham, 2013-2015.
+domain "labels"
+
 msgid ""
 msgstr ""
 "Project-Id-Version: Road Closings\n"
 "Report-Msgid-Bugs-To: dev@bloomington.in.gov\n"
-"POT-Creation-Date: 2013-09-20 16:33-0400\n"
-"PO-Revision-Date: 2014-11-03 11:30-0500\n"
+"PO-Revision-Date: 2015-05-18 11:59-04:00\n"
 "Last-Translator: Cliff Ingham <inghamn@bloomington.in.gov>\n"
 "Language-Team: City of Bloomington <dev@bloomington.in.gov>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.5.4\n"
 "Language: en_US\n"
-"X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-Basepath: .\n"
 
 msgid "home"
 msgstr "Home"
@@ -142,6 +140,12 @@ msgstr "Created"
 
 msgid "updated"
 msgstr "Updated"
+
+msgid "startDate"
+msgstr "Start Date"
+
+msgid "endDate"
+msgstr "End Date"
 
 msgid "headline"
 msgstr "Headline"
