Pulled department information out into site config. Fixes #18

--- a/language/en_US/LC_MESSAGES/messages.po
+++ b/language/en_US/LC_MESSAGES/messages.po
@@ -20,3 +20,6 @@ msgstr ""
 
 msgid "signed_in_as"
 msgstr "Signed in as %s"
+
+msgid "departmentContactInfo"
+msgstr "If you have any problems with this project, please contact %s %s"
