Updated preset searches to Today, Tomorrow...etc Fixes #22

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -171,8 +171,14 @@ msgstr "Location"
 msgid "upcoming_closures"
 msgstr "Upcoming Road Closures"
 
+msgid "searchPresets"
+msgstr "How many closures to show"
+
 msgid "today"
-msgstr "Next 24 hours"
+msgstr "Today"
+
+msgid "tomorrow"
+msgstr "Tomorrow"
 
 msgid "nextWeek"
 msgstr "7 days"
