Start on refactor of headerBar, imlement pill navigation for the map/schedule toggle

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -206,3 +206,9 @@ msgstr "On every"
 
 msgid "eventTypeLegend"
 msgstr "Filter By Type"
+
+msgid "mapView"
+msgstr "Map of Closings"
+
+msgid "scheduleView"
+msgstr "Schedule of Closings"
