Minor tweaks to the edit form.

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -212,3 +212,6 @@ msgstr "Map of Closings"
 
 msgid "scheduleView"
 msgstr "Schedule of Closings"
+
+msgid "dateTimeInfo"
+msgstr "Date and time information"
