--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -174,6 +174,9 @@ msgstr "Upcoming Road Closures"
 msgid "searchPresets"
 msgstr "Show closures for:"
 
+msgid "chooseDates"
+msgstr "Choose Dates"
+
 msgid "today"
 msgstr "Today"
 
