--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -171,6 +171,9 @@ msgstr "Location"
 msgid "upcoming_closures"
 msgstr "Upcoming Road Closures"
 
+msgid "application_title"
+msgstr "inRoads: Bloomington road, sidewalk and parking status information"
+
 msgid "searchPresets"
 msgstr "Show closures for:"
 
