Eliminate one more instance of the word, "closures".

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -186,7 +186,7 @@ msgid "application_title"
 msgstr "inRoads: Bloomington road, sidewalk and parking status information"
 
 msgid "searchPresets"
-msgstr "Show closures for:"
+msgstr "Dates"
 
 msgid "chooseDates"
 msgstr "Choose Dates"
