Added ability to delete events Fixes #50

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -141,6 +141,9 @@ msgstr "Add Event"
 msgid "event_edit"
 msgstr "Edit Event"
 
+msgid "event_delete"
+msgstr "Delete Event"
+
 msgid "event_info"
 msgstr "Event Info"
 
