Added title field for events

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -202,6 +202,9 @@ msgstr "Geography"
 msgid "geography_description"
 msgstr "Location"
 
+msgid "title"
+msgstr "Title"
+
 msgid "street"
 msgstr "Street"
 
