Quick design iteration on treatment for a list of event segments.

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -223,10 +223,10 @@ msgid "street"
 msgstr "Street"
 
 msgid "streetFrom"
-msgstr "From street"
+msgstr "From"
 
 msgid "streetTo"
-msgstr "To street"
+msgstr "To"
 
 msgid "direction"
 msgstr "Direction"
