--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -220,7 +220,9 @@ msgid "segment_delete"
 msgstr "Delete Segment"
 
 msgid "street"
-msgstr "Street"
+msgid_plural "streets"
+msgstr[0] "Street"
+msgstr[1] "Streets"
 
 msgid "streetFrom"
 msgstr "From"
