Visual indication of required fields. Fixes #99

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -61,6 +61,9 @@ msgstr "Help"
 msgid "description"
 msgstr "Description"
 
+msgid "requiredField"
+msgstr "This field is required"
+
 msgid "name"
 msgstr "Name"
 
