Added construction flag to events for TrafficCast
Fixes #105

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -187,6 +187,9 @@ msgstr "New Event Type"
 msgid "eventType_edit"
 msgstr "Edit Event Type"
 
+msgid "constructionFlag"
+msgstr "Construction"
+
 msgid "color"
 msgstr "Color"
 
