Added messages for help text on the event edit form
Updates #153

--- a/language/en_US/LC_MESSAGES/messages.po
+++ b/language/en_US/LC_MESSAGES/messages.po
@@ -23,3 +23,9 @@ msgstr "Signed in as %s"
 
 msgid "departmentContactInfo"
 msgstr "If you have any problems with this project, please contact %s %s"
+
+msgid "title_help"
+msgstr "Enter the title for the event"
+
+msgid "geography_description_help"
+msgstr "Enter the location for the event"
