--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -1,15 +1,15 @@
 # Translation
-# Copyright (C) 2013-2016 City of Bloomington
-# This file is distributed under the same license as the Blossom package.
+# Copyright (C) 2013-2018 City of Bloomington
+# This file is distributed under the same license as the inRoads application
 domain "labels"
 
 msgid ""
 msgstr ""
-"Project-Id-Version: Road Closings\n"
+"Project-Id-Version: inRoads\n"
 "Report-Msgid-Bugs-To: dev@bloomington.in.gov\n"
-"PO-Revision-Date: \n"
 "Last-Translator: Cliff Ingham <inghamn@bloomington.in.gov>\n"
 "Language-Team: City of Bloomington <dev@bloomington.in.gov>\n"
+"PO-Revision-Date: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -309,8 +309,5 @@ msgstr "Schedule"
 msgid "dateTimeInfo"
 msgstr "Date and time information"
 
-msgid "noEventsReturned.heading"
-msgstr "Smooth driving ahead!"
-
-msgid "noEventsReturned.message"
-msgstr "Either you've found the perfect day to travel, or your query returned no results (it's probably more the second thing)."
+msgid "ok"
+msgstr "Okay"
