--- a/language/en_US/LC_MESSAGES/errors.po
+++ b/language/en_US/LC_MESSAGES/errors.po
@@ -43,3 +43,6 @@ msgstr "That username is not in LDAP.  You cannot set LDAP authentication if the
 
 msgid "users/missingPerson_id"
 msgstr "You can only create user accounts for people who are already in the system, or are in LDAP."
+
+msgid "events/missingGeography"
+msgstr "You must draw the event's location on the map"
