Allowed users to edit their own account
Fixes #157

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -131,6 +131,9 @@ msgstr "Delete Account"
 msgid "user_info"
 msgstr "Account Info"
 
+msgid "account"
+msgstr "My Account"
+
 msgid "event"
 msgid_plural "events"
 msgstr[0] "Event"
