Created a route to display event history
Updates #138

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -169,6 +169,12 @@ msgstr "Start Date"
 msgid "endDate"
 msgstr "End Date"
 
+msgid "startTime"
+msgstr "Start Time"
+
+msgid "endTime"
+msgstr "End Time"
+
 msgid "allDay"
 msgstr "All Day Event"
 
