Added person info fields to user account form
For public user accounts, we have to ask for the user's
personal information, since we cannot load it from
Directory.

Fixes #163

--- a/language/en_US/LC_MESSAGES/messages.po
+++ b/language/en_US/LC_MESSAGES/messages.po
@@ -34,3 +34,9 @@ msgstr "%s Notification"
 
 msgid "event_disclaimer"
 msgstr "Entering in a closure does not waive any requirements for seeking appropriate approvals and permits."
+
+msgid "employee_authentication_help"
+msgstr ""
+"If you are using Employee authentication, the rest of this information will "
+"be filled in automatically from the directory. "
+"Otherwise, these fields are required."
