Updated language for event view link
Updates #154

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -155,7 +155,7 @@ msgid "event_delete"
 msgstr "Delete Event"
 
 msgid "event_info"
-msgstr "Event Info"
+msgstr "Event Details"
 
 msgid "created"
 msgstr "Created"
