Added log button to the view event screen
I moved the tool buttons down into the event info block.
There was not room in the headerBar to fit all the button
icons.

This also cleans up CSS styles for the button icons.  They
should all now be SVG.  Previously some of the icons (add,
delete) were drawn using CSS shapes.

Updates #138

--- a/language/en_US/LC_MESSAGES/labels.po
+++ b/language/en_US/LC_MESSAGES/labels.po
@@ -157,6 +157,9 @@ msgstr "Delete Event"
 msgid "event_info"
 msgstr "Event Details"
 
+msgid "eventHistory"
+msgstr "Log"
+
 msgid "created"
 msgstr "Created"
 
